// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeaderDropdown/MenuItem.ToggleFavoriteChannel should match snapshot for favorite channel 1`] = `
<li
  role="presentation"
>
  <button
    className="style--none"
    onClick={[Function]}
    role="menuitem"
  >
    <FormattedMessage
      defaultMessage="Remove from Favorites"
      id="channelHeader.removeFromFavorites"
      values={Object {}}
    />
  </button>
</li>
`;

exports[`components/ChannelHeaderDropdown/MenuItem.ToggleFavoriteChannel should match snapshot for not favorite channel 1`] = `
<li
  role="presentation"
>
  <button
    className="style--none"
    onClick={[Function]}
    role="menuitem"
  >
    <FormattedMessage
      defaultMessage="Add to Favorites"
      id="channelHeader.addToFavorites"
      values={Object {}}
    />
  </button>
</li>
`;
